--- a/Aula06.ipynb
+++ b/Aula06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -129,7 +129,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,6 +180,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "A lista de contatos terá o formato:\n",
+    "[ [\"nome\", \"telefone\"] ]\n",
+    "\"\"\"\n",
+    "\n",
+    "def Procura(nome, agenda):\n",
+    "    for contato in agenda:\n",
+    "        if contato[0] == nome:\n",
+    "            return contato[1]\n",
+    "    return None\n",
+    "\n",
+    "def Adiciona(nome, telefone, agenda):\n",
+    "    if Procura(nome, agenda) == None:\n",
+    "        agenda.append([nome,telefone])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
@@ -200,30 +227,15 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "A lista de contatos terá o formato:\n",
-    "[ [\"nome\", \"telefone\"] ]\n",
-    "\"\"\"\n",
-    "\n",
-    "def Procura(nome, agenda):\n",
-    "    for contato in agenda:\n",
-    "        if contato[0] == nome:\n",
-    "            return contato[1]\n",
-    "    return None\n",
-    "\n",
-    "def Adiciona(nome, telefone, agenda):\n",
-    "    if Procura(nome, agenda) == None:\n",
-    "        agenda.append([nome,telefone])\n",
-    "\n",
     "agenda = []\n",
     "Adiciona(\"Joao\",\"3333-2332\", agenda)\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "Adiciona(\"Maria\",\"444-2332\", agenda)\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "Adiciona(\"Jose\",\"2233-2332\", agenda)\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "Adiciona(\"Joao\",\"3333-2332\", agenda)\n",
-    "print agenda"
+    "print (agenda)"
    ]
   },
   {
@@ -252,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -266,26 +278,26 @@
      "text": [
       "{'Joao': '3333-2332'}\n",
       "{'Joao': '3333-2332', 'Maria': '444-2332'}\n",
-      "{'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n",
-      "{'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n"
+      "{'Joao': '3333-2332', 'Maria': '444-2332', 'Jose': '2233-2332'}\n",
+      "{'Joao': '3333-2332', 'Maria': '444-2332', 'Jose': '2233-2332'}\n"
      ]
     }
    ],
    "source": [
     "agenda = {}\n",
     "agenda['Joao'] = \"3333-2332\"\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "agenda[\"Maria\"] = \"444-2332\"\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "agenda[\"Jose\"] = \"2233-2332\"\n",
-    "print agenda\n",
+    "print (agenda)\n",
     "agenda['Joao'] = \"3333-2332\"\n",
-    "print agenda"
+    "print (agenda)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -297,13 +309,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n"
+      "{'Joao': '3333-2332', 'Maria': '444-2332', 'Jose': '2233-2332'}\n"
      ]
     }
    ],
    "source": [
     "agenda = {'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n",
-    "print agenda"
+    "print (agenda)"
    ]
   },
   {
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -338,7 +350,7 @@
     }
    ],
    "source": [
-    "print agenda['Joao']"
+    "print (agenda['Joao'])"
    ]
   },
   {
@@ -371,7 +383,7 @@
     }
    ],
    "source": [
-    "print \"Joao\" in agenda, \"Mario\" in agenda"
+    "print (\"Joao\" in agenda, \"Mario\" in agenda)"
    ]
   },
   {
@@ -387,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -399,14 +411,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Jose', 'Joao', 'Maria']\n",
-      "['2233-2332', '3333-2332', '444-2332']\n"
+      "dict_keys(['Joao', 'Maria', 'Jose'])\n",
+      "dict_values(['3333-2332', '444-2332', '2233-2332'])\n"
      ]
     }
    ],
    "source": [
-    "print agenda.keys()\n",
-    "print agenda.values()"
+    "print (agenda.keys())\n",
+    "print (agenda.values())"
    ]
   },
   {
@@ -422,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -434,15 +446,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O telefone de Jose é 2233-2332\n",
       "O telefone de Joao é 3333-2332\n",
-      "O telefone de Maria é 444-2332\n"
+      "O telefone de Maria é 444-2332\n",
+      "O telefone de Jose é 2233-2332\n"
      ]
     }
    ],
    "source": [
-    "for nome, telefone in agenda.iteritems():\n",
-    "    print \"O telefone de\", nome, \"é\", telefone"
+    "for nome, telefone in agenda.items():\n",
+    "    print (\"O telefone de\", nome, \"é\", telefone)"
    ]
   },
   {
@@ -476,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -551,8 +563,8 @@
     "    \n",
     "    \n",
     "    \n",
-    "print Anagrama(\"amor\", \"roma\")\n",
-    "print Anagrama(\"amor\", \"terror\")"
+    "print (Anagrama(\"amor\", \"roma\"))\n",
+    "print (Anagrama(\"amor\", \"terror\"))"
    ]
   },
   {
@@ -568,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -592,9 +604,9 @@
     "    return 0\n",
     "\n",
     "Freq = defaultdict( Padrao )\n",
-    "print Freq['a']\n",
+    "print (Freq['a'])\n",
     "Freq['a'] += 10\n",
-    "print Freq['a']"
+    "print (Freq['a'])"
    ]
   },
   {
@@ -612,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -633,16 +645,16 @@
    "source": [
     "from collections import defaultdict\n",
     "\n",
-    "print int()\n",
+    "print (int())\n",
     "Freq = defaultdict( int )\n",
-    "print Freq['a']\n",
+    "print (Freq['a'])\n",
     "Freq['a'] += 10\n",
-    "print Freq['a']"
+    "print (Freq['a'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -666,8 +678,8 @@
     "        Freq[letra] += 1\n",
     "    return Freq\n",
     "\n",
-    "print Anagrama(\"amor\", \"roma\")\n",
-    "print Anagrama(\"amor\", \"terror\")"
+    "print (Anagrama(\"amor\", \"roma\"))\n",
+    "print (Anagrama(\"amor\", \"terror\"))"
    ]
   },
   {
@@ -733,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -742,7 +754,9 @@
    },
    "outputs": [],
    "source": [
-    "trocas = [ ('A', '4'), ('C', '('), ('E', '3'), ('G','6'), ('H','#'), ('I','!'), ('O','0'), ('S','$'), ('T','7'), ('X','%') ]"
+    "trocas = [ ('A', '4'), ('C', '('), ('E', '3'), ('G','6'), \n",
+    "          ('H','#'), ('I','!'), ('O','0'), ('S','$'), \n",
+    "          ('T','7'), ('X','%') ]"
    ]
   },
   {
@@ -760,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -821,7 +835,7 @@
     "\n",
     "    \n",
     "    \n",
-    "print converte('Agora somos hackers', Mapa)"
+    "print (converte('Agora somos hackers', Mapa))"
    ]
   },
   {
@@ -840,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -865,9 +879,9 @@
     "        listaLetras.append( Mapa.get(letra, letra) )  # se não encontrar a letra, queremos que retorne a mesma letra\n",
     "    return ''.join(listaLetras)\n",
     "\n",
-    "print Mapa.get('A', 'A')\n",
-    "print Mapa.get('B', 'B')\n",
-    "print converte('Agora somos mais hackers', Mapa)"
+    "print (Mapa.get('A', 'A'))\n",
+    "print (Mapa.get('B', 'B'))\n",
+    "print (converte('Agora somos mais hackers', Mapa))"
    ]
   },
   {
@@ -883,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -903,7 +917,7 @@
     "def converte(palavra, Mapa):\n",
     "    return ''.join( [ Mapa.get(letra, letra) for letra in palavra ] )\n",
     "\n",
-    "print converte('Agora somos muito hackers', Mapa)"
+    "print (converte('Agora somos muito hackers', Mapa))"
    ]
   },
   {
@@ -932,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -958,7 +972,7 @@
     "\n",
     "f = codecs.open('exemplo.txt', 'r', 'utf-8')\n",
     "for linha in f:\n",
-    "    print linha\n",
+    "    print (linha)\n",
     "f.close()"
    ]
   },
@@ -1012,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1024,13 +1038,13 @@
     "import codecs\n",
     "\n",
     "f = codecs.open('exemploEscrita.txt', 'w', 'utf-8')\n",
-    "print >>f, \"Linha de Exemplo\"\n",
+    "print(\"Linha de Exemplo\", file=f)\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1052,29 +1066,38 @@
     "\n",
     "f = codecs.open('exemploEscrita.txt', 'r', 'utf-8')\n",
     "for linha in f:\n",
-    "    print linha\n",
+    "    print(linha)\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
