--- a/ListaEX_04.ipynb
+++ b/ListaEX_04.ipynb
@@ -9,51 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "em 2\n",
-      "quatro 1\n",
-      "ser 1\n",
-      "texto 1\n",
-      "vezes 1\n",
-      "correto 1\n",
-      "ocorrência 1\n",
-      "for 1\n",
-      "leituras 1\n",
-      "Esse 1\n",
-      "sobre 1\n",
-      "uma 1\n",
-      "usado 2\n",
-      "para 1\n",
-      "de 2\n",
-      "dicionário 1\n",
-      "da 1\n",
-      "aprender 1\n",
-      "como 1\n",
-      "palavra 1\n",
-      "mínimo 1\n",
-      "Se 1\n",
-      "a 1\n",
-      "resultado 1\n",
-      "e 1\n",
-      "pode 1\n",
-      "arquivos 1\n",
-      "textos 1\n",
-      "o 4\n",
-      "exemplo 1\n",
-      "estrutura 1\n",
-      "será 1\n",
-      "teremos 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Contador de palavras\n",
     "import codecs\n",
@@ -62,7 +22,7 @@
     "def ContaPalavras(texto):\n",
     "    \n",
     "for palavra, valor in ContaPalavras('exemplo.txt').iteritems():\n",
-    "    print palavra, valor"
+    "    print (palavra, valor)"
    ]
   },
   {
@@ -109,7 +69,7 @@
     "# converter data no formato 01-MAI-2000 em 01-05-2000\n",
     "def ConverteData(data):\n",
     "\n",
-    "print ConverteData('01-MAI-2000')"
+    "print (ConverteData('01-MAI-2000'))"
    ]
   },
   {
@@ -152,7 +112,7 @@
     "\n",
     "\n",
     "for chave, valor in Dados.iteritems():\n",
-    "    print chave, valor"
+    "    print (chave, valor)"
    ]
   },
   {
@@ -189,7 +149,7 @@
     "def Traduz(texto):\n",
     "    \n",
     "\n",
-    "print Traduz('exemplo.txt')"
+    "print (Traduz('exemplo.txt'))"
    ]
   },
   {
@@ -254,8 +214,8 @@
     "    \n",
     "\n",
     "l = Codifica('Vou tirar dez na proxima prova', 5)\n",
-    "print l\n",
-    "print Codifica(l,-5)"
+    "print (l)\n",
+    "print (Codifica(l,-5))"
    ]
   },
   {
@@ -287,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -306,10 +266,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f176030b0d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fed385932b0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,27 +339,27 @@
     "    \n",
     "r = DecRoman(1345)\n",
     "x = RomanDec(r)\n",
-    "print r,x"
+    "print (r,x)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
