--- a/ListaEX_05.ipynb
+++ b/ListaEX_05.ipynb
@@ -52,9 +52,9 @@
     "# crie uma matriz 8 x 8 com valores em forma de xadrez 0,1\n",
     "import numpy as np\n",
     "\n",
-    "print matriz\n",
-    "print\n",
-    "print matriz2     "
+    "print (matriz)\n",
+    "print ()\n",
+    "print (matriz2   )  "
    ]
   },
   {
@@ -93,7 +93,7 @@
     "\n",
     "\n",
     "\n",
-    "print matriz"
+    "print (matriz)"
    ]
   },
   {
@@ -142,9 +142,9 @@
     "\n",
     "\n",
     "\n",
-    "print Z2\n",
-    "print\n",
-    "print Z3"
+    "print (Z2)\n",
+    "print ()\n",
+    "print (Z3)"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "source": [
     "# função que substitui o maior valor por 0 e retorna o maior valor\n",
     "Z = np.array([1.,2.,3.,4.,5.,6.])\n",
-    "print Z.max()\n"
+    "print (Z.max())\n"
    ]
   },
   {
@@ -208,7 +208,7 @@
     " [ 0.6 ,  0.02,  0.39,  0.29,  0.33,  0.07,  0.35,  0.31,  0.38,  0.84]])\n",
     "\n",
     "\n",
-    "print D"
+    "print (D)"
    ]
   },
   {
@@ -240,21 +240,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
