--- a/Aula01.ipynb
+++ b/Aula01.ipynb
@@ -1814,7 +1814,7 @@
     "import math\n",
     "# 1) entre com o numero do mes do seu nascimento na variavel 'mes' e siga as instruções abaixo colocando o resultado\n",
     "# na variável 'resultado'.\n",
-    "mes = input('Digite o mes do seu nascimento: ')\n",
+    "mes = int(input('Digite o mes do seu nascimento: '))\n",
     "resultado = 0\n",
     "\n",
     "# 1) multiplique o número por 2 e armazene na variavel de nome resultado\n",
@@ -2478,21 +2478,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
