--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -82,12 +82,15 @@
     "\n",
     "#### * No Windows:\n",
     "\n",
-    "#### Crie um diretório de trabalho para armazenar todos os Notebooks criados durante o curso. Nesse diretório crie um arquivo texto contendo o seguinte comando:\n",
+    "#### Na pasta Documentos crie um diretório chamado Notebooks, abra um *prompt de comando* e digite:\n",
     "\n",
-    "```jupyter notebook\n",
+    "```cd \\User\\login\\Documents\\Notebooks\n",
+    "echo jupyter notebook > jup.bat\n",
     "```\n",
     "\n",
-    "#### e salve com o nome jupyter.bat. Para utilizar o Jupyter Notebook, clique duas vezes nesse arquivo.\n",
+    "onde *login* é o nome de seu usuário no computador. Em seguida, basta clicar duas vezes em *jup*.\n",
+    "\n",
+    "#### e salve com o nome jup.bat. Para utilizar o Jupyter Notebook, clique duas vezes nesse arquivo.\n",
     "\n",
     "#### * No Mac:\n",
     "\n",
@@ -158,7 +161,7 @@
    "source": [
     "#### O outro tipo de célula é o Markdown, que permite digitar textos formatados, como o desse quadro. Algumas marcações possíveis são:\n",
     "\n",
-    "\\* *Todo texto em torno de um asterisco fica em itálico * \\*\n",
+    "\\* *Todo texto em torno de um asterisco fica em itálico* \\*\n",
     "\\*\\* **Todo texto em torno de dois asteriscos fica em negrito** \\*\\*\n",
     "\n",
     "* \\* Sequências de linhas iniciando com asterísco forma uma lista\n",
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -241,28 +244,37 @@
     }
    ],
    "source": [
-    "print \"Bons estudos!\""
+    "print(\"Bons estudos!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
